fix: fix background z-index

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -43,6 +43,7 @@ body {
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    z-index: -100;
 
     .background-circle {
       width: 140vh;
